--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,8 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-    },
-    "devDependencies": {
-      "msw": "^1.2.1"
-    }
+  },
+  "devDependencies": {
+    "msw": "^1.2.1"
+  }
 }
